--- a/build.yaml
+++ b/build.yaml
@@ -16,4 +16,6 @@
 #     cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
 #     artifact-name: corne_left_with_logging
 #
----
+include:
+  - board: corneish_zen_v2_left
+  - board: corneish_zen_v2_right
