--- a/boards/arm/corneish_zen/corneish_zen_v2_left_defconfig
+++ b/boards/arm/corneish_zen/corneish_zen_v2_left_defconfig
@@ -39,10 +39,10 @@ CONFIG_CLOCK_CONTROL_NRF_K32SRC_30PPM=y
 CONFIG_ZMK_USB=y
 CONFIG_ZMK_BLE=y
 
+CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
+
 # enable display drivers
 CONFIG_ZMK_DISPLAY=y
-
-
 
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 CONFIG_ZMK_DISPLAY_DEDICATED_THREAD_STACK_SIZE=2048
