--- a/boards/arm/corneish_zen/corneish_zen_v2_left_defconfig
+++ b/boards/arm/corneish_zen/corneish_zen_v2_left_defconfig
@@ -42,7 +42,7 @@ CONFIG_ZMK_BLE=y
 CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
 
 # enable display drivers
-CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=n
 
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 CONFIG_ZMK_DISPLAY_DEDICATED_THREAD_STACK_SIZE=2048
