--- a/boards/arm/corneish_zen/corneish_zen_v2_left.dts
+++ b/boards/arm/corneish_zen/corneish_zen_v2_left.dts
@@ -19,6 +19,7 @@
 
     kscan0: kscan {
         compatible = "zmk,kscan-gpio-matrix";
+        wakeup-source;
 
         diode-direction = "col2row";
         row-gpios
