--- a/config/corneish_zen.conf
+++ b/config/corneish_zen.conf
@@ -32,6 +32,9 @@ CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=n
 #usb-name
 CONFIG_USB_DEVICE_MANUFACTURER="corne_epd"
 
+# support display
+CONFIG_ZMK_DISPLAY=y
+
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_HID_REPORT_TYPE_NKRO=n
 #CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
